--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,15 @@ name = "pypi"
 
 [packages]
 django = "*"
+django-debug-toolbar = "*"
+django-filter = "*"
+djangorestframework = "*"
+djoser = "*"
+djangorestframework-simplejwt = "*"
+django-cors-headers = "*"
+psycopg2-binary = "*"
+psycopg2 = "*"
+drf-yasg = "*"
 
 [dev-packages]
 
